# qontrol_example

./: .clangd  CMakeLists.txt  qontrol
src/: AppController.cpp  AppController.h  Controller.cpp  Controller.h  MainWindow.cpp  MainWindow.h  main.cpp
src/screens/: Home.cpp  Home.h  Next.cpp  Next.h
